src/tests/fixtures/resolver_context/ClassMethodWithContextValueExported.ts.expected
-----------------
INPUT
----------------- 
export type GratsContext = {
  greeting: string;
};

/** @gqlType */
export class Query {
  /** @gqlField */
  greeting(args: never, ctx: GratsContext): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ClassMethodWithContextValueExported.ts:8:18 - error: Expected GraphQL field arguments to be typed using a literal object: `{someField: string}`. If there are no arguments, you can use `args: unknown`.

8   greeting(args: never, ctx: GratsContext): string {
                   ~~~~~
